# fr3d-python

./: .editorconfig  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.mkd  manifest.in  pyproject.toml  pytest.ini  requirements-python-2-7.txt  setup.py
.ci/: install-deps.sh  setup.py
.github/workflows/: docker.yml
examples/: aa-RNA_3D_plots.py  atom_atom_distances.py  cifatom_writing.py  classify-nt-aa.py  iterate-over-parts.py  iterate_over_parts.py  list_units.py  print_atom_name.py  stackNov10.py  testNov10.py  testNov12.py  testNov12ntwking.py  testNov19.py  testNov6.py
files/: 1AQ3.cif  1CGM.cif  1GID.cif  1I9K.cif  1UTD.cif  1WMQ.cif  2G32.cif  2J32.cif  3R1E.cif  4CS1.cif  4FTE.cif  4MCE.cif  4NGG.cif  4NMG.cif  4OQ8.cif  4Q0B.cif  4R3I.cif  4X4N.cif
fr3d/: RNA-peptide_bb.py  RNA-protein-annotation.py  RNA-protein-fast-neighbor-index.py  RNA-protein-fast-neighbor.py  RNA-protein-test-transformations.py  RNA-protein.py  Superposition_cif.py  data.py  definitions.py  discrepancy.py  generate_location_checks.py  localpath.py  modified_parent_mapping.py  plot-base-aa.py  temp.py  test_modified_nucleotides.py  unit_ids.py  write_modified_mapping_matlab.py
fr3d/RNA-protein/: RNA-protein_2017.py  (+2 more)
tests/: FR3D-Matlab-1GID-fitted-coordinates.txt  FR3D-Matlab-1GID-rotation-matrices.txt  cif_test.py  convex_regions_test.py  data_tests.py  define_1S72_nucleotides.py  define_nucleotides.py  discrepancy_test.py  discrepancy_tests.py  inferhydrogen_test.py  nucleotide_superposition_test.py  superpositions.py  superpositions_test.py  unit_ids_test.py
(+215 files in other folders)
